# Caffe_AlphaZero

./: CMakeLists.txt  README.md
AlphaZero/: CMakeLists.txt
AlphaZero/include/: AlphaZero.h  GenericState.h  MCTS.h  Node.h
ConnectNGame/: CMakeLists.txt
ConnectNGame/include/: ConnectNState.h
ConnectNGame/src/: main.cpp
TicTacGame/: CMakeLists.txt
TicTacGame/include/: TicTacState.h
TicTacGame/src/: main.cpp
launch_files/: net_tic_tac_6_4.prototxt  net_tic_tac_6_4_1_res_block.caffemodel  net_tic_tac_6_4_1_res_block.prototxt  net_tic_tac_6_4_2_res_block.caffemodel  net_tic_tac_6_4_2_res_block.prototxt  net_tic_tac_6_4_batch_norm.prototxt  solver.prototxt  test_tic_tac.bat  train_tic_tac.bat
